Closed Bug 1636725 Opened 5 years ago Closed 5 years ago

The printing Page Setup dialog settings on macOS are not properly saved

Categories

(Core :: Printing: Setup, defect, P3)

defect

Tracking

()

RESOLVED FIXED
mozilla78
Tracking Status
firefox78 --- fixed

People

(Reporter: jwatt, Assigned: jwatt)

References

Details

(Whiteboard: [print2020_v78])

Attachments

(2 files)

No description provided.
Pushed by jwatt@jwatt.org: https://hg.mozilla.org/integration/autoland/rev/acdf83cf43a1 p1. Add some printing comments. r=bobowen https://hg.mozilla.org/integration/autoland/rev/7028be64ec64 p2. Properly save the settings chosen by the user in the Page Setup dialog on macOS. r=bobowen
Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla78
Blocks: 1638143
Flags: qe-verify+

Hello Jonathan,

I have tried to verify if this issue is indeed fixed but I could use a little more information on what Page Setup dialog setting on macOS does this fix affect?

I have verified on an macOS 10.15.5 using the latest FF Beta (78.0b9) and the latest Nightly 79.0a1 (2020-06-18) as well as trying to reproduce the affected behavior on a Nightly from (2020-05-09) and I cannot see any behavior that is different between latest and the above specified nightly build from last month.

Flags: needinfo?(jwatt)

Vlad: if paper size and orientation are saved across restarts then all is good.

Flags: needinfo?(jwatt)
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: