Bug 1636725 p1. Add some printing comments. r=bobowen

Differential Revision: https://phabricator.services.mozilla.com/D74547