widget/gtk/nsPrintDialogGTK.cpp
@@ -1035,6 +1035,10 @@ nsPrintDialogServiceGTK::ShowPageSetup(nsPIDOMWindowOuter* aParent,
   g_object_unref(newPageSetup);
 
   if (psService)
+    // XXX We should probably only be saving the values for the settings that
+    // we showed to the user in the page settings dialog.  Does using
+    // kInitSaveAll cause us to incorrectly overwrite settings that we should
+    // leave alone?
     psService->SavePrintSettingsToPrefs(aNSSettings, true,
                                         nsIPrintSettings::kInitSaveAll);
 
